--- a/С4/Диаграмма контейнеров.md
+++ b/С4/Диаграмма контейнеров.md
@@ -1,2 +1,6 @@
 
 ![Untitled - Container](https://github.com/user-attachments/assets/7899c2b7-f37a-4d95-a685-e9494cbf9406)
+
+
+
+[Диаграмма компонентов.pdf](https://github.com/user-attachments/files/23440184/default.pdf)
